Fix "more" (menu) button positioning on small screens

--- a/client/css/_app.scss
+++ b/client/css/_app.scss
@@ -546,6 +546,11 @@ md-progress-circular {
 }
 
 
+.md-toolbar-tools .md-menu {
+  padding: 0;
+}
+
+
 .welcome {
   .centered {
     margin-left: auto;
